[package]
name = "sealevel-nostd-example-program"
version = "0.1.0"
edition = "2021"
description = "An example usage of sealevel-nostd-entrypoint"
license = "Apache-2.0"
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Magnetar Fields <0xMAGNETAR@proton.me>",
]
repository = "https://github.com/rtrombone/sealevel-nostd-entrypoint"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { workspace = true }
sealevel-nostd-entrypoint = { workspace = true }
# solana-pubkey = { git = "https://github.com/anza-xyz/agave.git" }
# solana-program-error = { git = "https://github.com/anza-xyz/agave.git" }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { version = "1.35.1", features = ["full"] }
